--- a/.settings/org.eclipse.cdt.core.prefs
+++ b/.settings/org.eclipse.cdt.core.prefs
@@ -2,5 +2,8 @@ eclipse.preferences.version=1
 environment/project/0.628541039/MINGW_HOME/delimiter=;
 environment/project/0.628541039/MINGW_HOME/operation=replace
 environment/project/0.628541039/MINGW_HOME/value=C\:\\mingw-w64\\x86_64-6.2.0-posix-seh-rt_v5-rev1\\mingw64
+environment/project/0.628541039/PATH/delimiter=;
+environment/project/0.628541039/PATH/operation=replace
+environment/project/0.628541039/PATH/value=${MINGW_HOME}\\bin;${MINGW_HOME}\\include;${MSYS_HOME}\\bin;C\:\\Program Files\\Common Files\\Microsoft Shared\\Windows Live;C\:\\Program Files (x86)\\Common Files\\Microsoft Shared\\Windows Live;C\:\\Windows\\system32;C\:\\Windows;C\:\\Windows\\System32\\Wbem;C\:\\Windows\\System32\\WindowsPowerShell\\v1.0\\;C\:\\Program Files (x86)\\Windows Live\\Shared;C\:\\Program Files (x86)\\ATI Technologies\\ATI.ACE\\Core-Static;C\:\\Program Files (x86)\\Pico Technology\\PicoScope6\\;C\:\\Program Files (x86)\\Pico Technology\\Pico Full\\;C\:\\Program Files (x86)\\AMD\\ATI.ACE\\Core-Static
 environment/project/0.628541039/append=true
 environment/project/0.628541039/appendContributed=true
