--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,22 @@
+##########################
+#
+#	extensions
+#
+##########################
 *.exe
 *.wav
 *.o
+*.m4a
+
+
+
+##########################
+#
+#	paths
+#
+##########################
 Default/
 Default/*
 Default/*/*
+
+data/*
