--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -2,3 +2,4 @@ eclipse.preferences.version=1
 encoding//python/test.py=utf-8
 encoding//python/test2.py=utf-8
 encoding//python/test3.py=utf-8
+encoding//python/test_4.py=utf-8
