Prog / D-4 12#1 / C_SoundProg / use python / 20170608_083921
steps=~2
---
NEW-1 : new func : data_Absolutize(wavefile) ::: test_1.py : C:\WORKS_2\WS\Eclipse_Luna\C_SoundProg\python\12_1
#) NEW-2 : new func : amplitude_Down(wavefile, val) ::: test_1.py

	==> done

---------------- TEMPLATE
1.  --> .

	==> done

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,6 @@
 eclipse.preferences.version=1
-encoding//python/test.py=utf-8
-encoding//python/test2.py=utf-8
-encoding//python/test3.py=utf-8
-encoding//python/test_4.py=utf-8
+encoding//python/12_1/test_1.py=utf-8
+encoding//python/storage_python/test.py=utf-8
+encoding//python/storage_python/test2.py=utf-8
+encoding//python/storage_python/test3.py=utf-8
+encoding//python/storage_python/test_4.py=utf-8
