--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,6 @@
 eclipse.preferences.version=1
 encoding//python/12_1/test_1.py=utf-8
+encoding//python/libs/wablibs.py=utf-8
 encoding//python/storage_python/test.py=utf-8
 encoding//python/storage_python/test2.py=utf-8
 encoding//python/storage_python/test3.py=utf-8
