Prog / D-4 14#1 / C_SoundProg / use python / 20170610_092414
steps=~3
---
==> see mail

	==> done

---------------- TEMPLATE
1.  --> .

	==> done

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@
 *.o
 *.m4a
 *.pyc
+*.jpg	# 2017/06/10 12:23:12
+*.avi	# 2017/06/10 12:23:12
 
 
 ##########################
@@ -20,3 +22,6 @@ Default/*
 Default/*/*
 
 data/*
+
+python/*/*/*/*.jpg
+python/*/*/*.avi
