--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -2,6 +2,7 @@ eclipse.preferences.version=1
 encoding//python/12_1/test_1.py=utf-8
 encoding//python/13_1/test_1.py=utf-8
 encoding//python/13_1/test_X.TEMPLATE.py=utf-8
+encoding//python/14_1/test_1.py=utf-8
 encoding//python/libs/wablibs.py=utf-8
 encoding//python/storage_python/test.py=utf-8
 encoding//python/storage_python/test2.py=utf-8
